--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 Hello world
 Holberton is a great program
 <body>
+<h1>Dog 1</h1>
+<h2>Dog 2</h2>
+<h3>Dog 3</h3>
+<h4>Dog 4</h4>
+<h5>Dog 5</h5>
+<h6>Dog 6</h6>
