--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@ Holberton is a great program
 <h5>Dog 5</h5>
 <h6>Dog 6</h6>
 <h1><b><i> I dont know</b></i></h1>
+<b>Corgi</b> is a cute <b>dog </b> and that <b>dog</b> look friendly.
