--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@ Holberton is a great program
 <h6>Dog 6</h6>
 <h1><b><i> I dont know</b></i></h1>
 <b>Corgi</b> is a cute <b>dog </b> and that <b>dog</b> look friendly.
+<h1> Corgi image</h1>
+<img src="http://cdn3-www.dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg"</img>
