--- a/index.html
+++ b/index.html
@@ -11,3 +11,11 @@ Holberton is a great program
 <b>Corgi</b> is a cute <b>dog </b> and that <b>dog</b> look friendly.
 <h1> Corgi image</h1>
 <img src="http://cdn3-www.dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg"</img>
+<body>
+  <h1> Music list</h1>
+  <ul>
+    <li>Closer</li>
+    <li>Shape Of You</li>
+    <li>Company</li>
+  </ul>
+</body>  
