3 image of corgi

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Holberton is a great program
 <ul>
   <li><img src="http://cdn3-www.dogtime.com/assets/uploads/2011/01/file_23192_pembroke-welsh-corgi.jpg"</img>
   <li><img src="http://pic1.bbzhi.com/dongwubizhi/pengbuluokeweiershikejiquanbizhiwelshcorgi/animal_pembroke_welsh_corgi_45286_3.jpg"</img>
-  <li><img src="https://previews.123rf.com/images/photodeti/photodeti1307/photodeti130700190/20931239-Pembroke-Welsh-Corgi-dog-with-a-blank-banner-hung-on-the-neck-looking-at-camera-Stock-Photo.jpg</img>
+  <li><img src="https://previews.123rf.com/images/photodeti/photodeti1307/photodeti130700190/20931239-Pembroke-Welsh-Corgi-dog-with-a-blank-banner-hung-on-the-neck-looking-at-camera-Stock-Photo.jpg"</img>
 </ul>
 
 </body>
