--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@ Holberton is a great program
   <li><img src="http://pic1.bbzhi.com/dongwubizhi/pengbuluokeweiershikejiquanbizhiwelshcorgi/animal_pembroke_welsh_corgi_45286_3.jpg"height="600" width="600"</img>
   <li><img src="https://previews.123rf.com/images/photodeti/photodeti1307/photodeti130700190/20931239-Pembroke-Welsh-Corgi-dog-with-a-blank-banner-hung-on-the-neck-looking-at-camera-Stock-Photo.jpg"height="600" width="600"</img>
 </ul>
+<ol>
+<li><a target="blank_" href="https://www.youtube.com/watch?v=PT2_F-1esPk">Closer</a></li>
+<li><a target="blank_" href="https://www.youtube.com/watch?v=JGwWNGJdvx8">Shape of you</a></li>
+<li><a target="blank_" href="https://www.youtube.com/watch?v=gdx7gN1UyX0">Company</a></li>
+</ol>
+
+
+
 
 </body>
