--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 Hello world
 Holberton is a great program
+
 <body>
 <h1>Dog 1</h1>
 <h2>Dog 2</h2>
@@ -7,7 +8,8 @@ Holberton is a great program
 <h4>Dog 4</h4>
 <h5>Dog 5</h5>
 <h6>Dog 6</h6>
-<h1><b><i> I dont know</b></i></h1>
+
+<h1><b><i> Corgi Dog</b></i></h1>
 <b>Corgi</b> is a cute <b>dog </b> and that <b>dog</b> look friendly.
 <h1> Corgi image</h1>
 <img src="http://cdn3-www.dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg"</img>
@@ -17,16 +19,20 @@ Holberton is a great program
     <li>Shape Of You</li>
     <li>Company</li>
 </ul>
+
 <ul>
-  <li><img src="http://cdn3-www.dogtime.com/assets/uploads/2011/01/file_23192_pembroke-welsh-corgi.jpg" height="600" width="600"</img>
-  <li><img src="http://pic1.bbzhi.com/dongwubizhi/pengbuluokeweiershikejiquanbizhiwelshcorgi/animal_pembroke_welsh_corgi_45286_3.jpg"height="600" width="600"</img>
-  <li><img src="https://previews.123rf.com/images/photodeti/photodeti1307/photodeti130700190/20931239-Pembroke-Welsh-Corgi-dog-with-a-blank-banner-hung-on-the-neck-looking-at-camera-Stock-Photo.jpg"height="600" width="600"</img>
+  <li><a target="blank_" href="https://en.wikipedia.org/wiki/Pembroke_Welsh_Corgi"<li><img src="http://cdn3-www.dogtime.com/assets/uploads/2011/01/file_23192_pembroke-welsh-corgi.jpg" height="400" width="400"</img></li>
+  <li><a target="blank_" href="http://dogtime.com/dog-breeds/pembroke-welsh-corgi"<li><img src="http://pic1.bbzhi.com/dongwubizhi/pengbuluokeweiershikejiquanbizhiwelshcorgi/animal_pembroke_welsh_corgi_45286_3.jpg"height="400" width="400"</img></li>
+  <li><a target="blank_" href="http://stories.barkpost.com/our-favorite-barrels-of-fluff-10-fun-corgi-facts/"<li><img src="https://previews.123rf.com/images/photodeti/photodeti1307/photodeti130700190/20931239-Pembroke-Welsh-Corgi-dog-with-a-blank-banner-hung-on-the-neck-looking-at-camera-Stock-Photo.jpg"height="400" width="400"</img></li>
 </ul>
+
 <ol>
 <li><a target="blank_" href="https://www.youtube.com/watch?v=PT2_F-1esPk">Closer</a></li>
 <li><a target="blank_" href="https://www.youtube.com/watch?v=JGwWNGJdvx8">Shape of you</a></li>
 <li><a target="blank_" href="https://www.youtube.com/watch?v=gdx7gN1UyX0">Company</a></li>
 </ol>
+
+
 
 
 
