--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -1,1 +1,12 @@
-hi
+<!DOCTYPE html>
+  <html>
+    <meta charset="utf-8">
+  <head>
+    <title></title>
+  </head>
+
+
+  <body>
+    <p></p>
+  </body>
+  </html>
