--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
   <html>
     <meta charset="utf-8">
   <head>
-    <title>Who are you?</title>
+    <title></title>
   </head>
 
   <body>
-    <p>Hello, How are you? I'm good</p><p><a href="file:///Users/summercamp/Documents/holberton-learning_Web_programing/holberton-learning_web_programming/mysecondwebpage.html">Go to my second web page</a></p>
+    <p>Hello, How are you? I'm good</p>
+    <p><a href="file:///Users/summercamp/Documents/holberton-learning_Web_programing/holberton-learning_web_programming/mysecondwebpage.html">Go to my second web page</a></p>
   </body>
   </html>
