--- a/index1.html
+++ b/index1.html
@@ -33,4 +33,5 @@ Holberton is a great program
   <li><a target="blank_" href="https://www.youtube.com/watch?v=gdx7gN1UyX0">Company</a></li>
 </ol>
 
+<p><a href="file:///Users/summercamp/Documents/holberton-learning_Web_programing/holberton-learning_web_programming/mysecondwebpage.html">Go to my second web page</a></p>
 </body>
