--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <p>Hello, How are you? I'm good</p>
+    <p>Hello How are you ? I'm good</p>
     <p><a href="file:///Users/summercamp/Documents/holberton-learning_Web_programing/holberton-learning_web_programming/mysecondwebpage.html">Go to my second web page</a></p>
   </body>
   </html>
