--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -7,7 +7,7 @@
 
 
   <body>
-    <p><a href="file:///Users/summercamp/Documents/holberton-learning_Web_programing/holberton-learning_web_programming/index.html">Go to my index web page</a></p>
+    <p><a href="index.html">Go to my index web page</a></p>
     <p><a target="blank_" href="https://www.holbertonschool.com/"<li><img src="https://www.holbertonschool.com/assets/holberton-logo-1cc451260ca3cd297def53f2250a9794810667c7ca7b5fa5879a569a457bf16f.png"</img></p>
     <div style="color:green">Green for the win!</div>
 
