--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -4,12 +4,14 @@
   <head>
     <title></title>
   </head>
-
-
   <body>
     <p><a href="index.html">Go to my index web page</a></p>
-    <p><a target="blank_" href="https://www.holbertonschool.com/"<li><img src="https://www.holbertonschool.com/assets/holberton-logo-1cc451260ca3cd297def53f2250a9794810667c7ca7b5fa5879a569a457bf16f.png"</img></p>
+    <p><a target="blank_" href="https://www.holbertonschool.com/"<li><img src="https://www.holbertonschool.com/assets/holberton-logo-1cc451260ca3cd297def53f2250a9794810667c7ca7b5fa5879a569a457bf16f.png"</img></a></p>
     <div style="color:green">Green for the win!</div>
+
+    <div id="white_on_red">White writing on red background</div>
+    <link rel="stylesheet" href="style.css"></head>
+
 
   </body>
   </html>
