--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -11,6 +11,7 @@
 
     <div id="white_on_red">White writing on red background</div>
     <link rel="stylesheet" href="style.css"></head>
+    <div id="going_to_the_right">I prefer to be aside.</div>
 
 
   </body>
