--- a/mysecondwebpage.html
+++ b/mysecondwebpage.html
@@ -15,7 +15,10 @@
   <div id="white_on_red">White writing on red background.</div>
 
 
-  <div id="going_to_the_right">I prefer to be aside.</div>
+  <!--div id="going_to_the_right">I prefer to be aside.</div>
+  <-->
+
+
 
 
   </body>
