--- a/bootstrap.html
+++ b/bootstrap.html
@@ -5,6 +5,16 @@
 </head>
 <body>
 
-</body>
+  <div class="jumbotron">
+    <center>
+      Hello
+    <center>
+  </div>
 
+  <div class="container">
+
+  </div>
+
+
+</body>
 </html>
