--- a/layout.html
+++ b/layout.html
@@ -1,1 +1,22 @@
-layout.html
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+<body>
+
+  <div class="jumbotron">
+    <center>
+      Hello
+    <center>
+  </div>
+
+  <div class="row" style="background-color:blue;height:200px;">
+    <div class="col">
+      Bingo
+    </div>
+  </div>
+
+
+</body>
+</html>
