--- a/layout.html
+++ b/layout.html
@@ -10,7 +10,7 @@
       Hello
     <center>
   </div>
-
+  <div class="container">
   <div class="row" style="background-color:blue;height:200px;">
     <div class="col">
       Bingo
