--- a/3-twitter_bootstrap/101-glyphicons.html
+++ b/3-twitter_bootstrap/101-glyphicons.html
@@ -7,7 +7,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <h1><span class="glyphicon glyphicon-plus"></span>I love HTML. <span class="glyphicon glyphicon-music"></span> </h1>
+  <h1><span class="glyphicon glyphicon-plus"></span><font size="60">I love HTML.</font><span class="glyphicon glyphicon-music"></span> </h1>
 
 </body>
 </html>
