--- a/embed.html
+++ b/embed.html
@@ -3,26 +3,50 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
+
 <body>
 <center>
   <h1>DayDream</h1>
-  <div class="jumbotron">
-    <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/258943417&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" frameborder="0" allowfulscreen></iframe>
-  </div>
+    <div class="jumbotron">
+      <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/258943417&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" frameborder="0" allowfulscreen></iframe>
+    </div>
 </center>
 
 <center>
   <h1>Lac Troi</h1>
-  <div class="jumbotron">
-    <<iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/300407404&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" frameborder="0" allowfulscreen></iframe>
-  </div>
+    <div class="jumbotron">
+      <<iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/300407404&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" frameborder="0" allowfulscreen></iframe>
+    </div>
 </center>
 
 <center>
   <h1>Yeu 5</h1>
-  <div class="jumbotron">
-<iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/303945848&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" frameborder="0" allowfulscreen></iframe>
-  </div>
+    <div class="jumbotron">
+      <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/303945848&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" frameborder="0" allowfulscreen></iframe>
+    </div>
+</center>
+
+<center>
+  <h1>Noi Nay Co Anh</h1>
+    <div class="jumbotron">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/FN7ALfpGxiI" frameborder="0" allowfullscreen></iframe>
+    </div>
+</center>
+
+
+<center>
+  <h1>Lac Troi</h1>
+    <div class="jumbotron">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
+    </div>
+</center>
+
+
+<center>
+  <h1>Binh Yen Nhung Phut Giay</h1>
+    <div class="jumbotron">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
+    </div>
 </center>
 
 </body>
