--- a/embed.html
+++ b/embed.html
@@ -6,7 +6,7 @@
 
 <body>
 <center>
-  <h1>DayDream</h1>
+  <h1>DayDream<button type"button"><a href="https://twitter.com/share?url=?=?;hashtags=?" target="_blank"> <img src="https://lh3.ggpht.com/lSLM0xhCA1RZOwaQcjhlwmsvaIQYaP3c5qbDKCgLALhydrgExnaSKZdGa8S3YtRuVA=w300" alt="Twitter" height="50px" width="50px" /> </a></h1>
     <div class="jumbotron">
       <iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/258943417&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true" frameborder="0" allowfulscreen></iframe>
     </div>
@@ -48,6 +48,15 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
     </div>
 </center>
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
