--- a/5-javascript/8.html
+++ b/5-javascript/8.html
@@ -9,7 +9,7 @@
       <button onclick="myFunction()" style="background-color:yellow"><font color="black">Mystery Button</font></button>
       <script>
         function myFunction() {
-          alert("I am an alert box!");
+          alert("Surprise!");
           }
       </script>
 
