--- a/3-twitter_bootstrap/100-dropdown_menu.html
+++ b/3-twitter_bootstrap/100-dropdown_menu.html
@@ -22,3 +22,7 @@
 
 </body>
 </html>
+
+
+
+<button type="button" style="background-color:black"><font color="white"></font><img src="http://cdn3-www.dogtime.com/assets/uploads/gallery/pembroke-welsh-corgi-dog-breed-pictures/prance-8.jpg" height="50" width="100"</img></button>
