--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -8,7 +8,7 @@
 <body>
 
 <img src="https://s-media-cache-ak0.pinimg.com/736x/8d/70/a8/8d70a81fccb3fb12d4c86181019bdf67--logo-type-logo-s.jpg" height="30" width="40" </img>
-<nav class="w3-bar w3-white">
+<nav class="w3-bar w3-yellow">
   <a href="#home" class="w3-button w3-bar-item">Home</a>
   <a href="#Pop" class="w3-button w3-bar-item">Pop</a>
   <a href="#Rap" class="w3-button w3-bar-item">Rap</a>
