--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -16,9 +16,9 @@
 </nav
 
 
-<style>
+<style
 input[type=text] {
-    width: 330px;
+    width: 100%;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
