--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -128,7 +128,7 @@ input[type=text]:focus {
 
 
 <!-- Background Image -->
-<div class="container">
+<div class="w3-content w3-display-container">
   <img class="mySlides" src="https://s-media-cache-ak0.pinimg.com/originals/f4/e1/06/f4e1064f2f2f06e9c5f71fef985a2281.jpg"
   style="height:100%;width:100%">
   <img class="mySlides" src="https://i.ytimg.com/vi/s4spqOY6Rfc/maxresdefault.jpg"
