--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -15,8 +15,8 @@
    <!-- Home Bar  -->
    <nav class="w3-bar w3-red">
      <span style="font-size:25px;cursor:pointer"onclick="openNav()">&#9776;</span>
-    <a href="home.html" class="w3-button w3-bar-item">Home</a>
-    <a href="#Pop" class="w3-button w3-bar-item">Pop</a>
+    <a href="Final.html" class="w3-button w3-bar-item">Home</a>
+    <a href="Pop.html" class="w3-button w3-bar-item">Pop</a>
     <a href="#Rap" class="w3-button w3-bar-item">Rap</a>
     <a href="#band" class="w3-button w3-bar-item">About</a>
 
