--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -17,7 +17,7 @@
      <span style="font-size:25px;cursor:pointer"onclick="openNav()">&#9776;</span>
     <a href="Final.html" class="w3-button w3-bar-item">Home</a>
     <a href="Pop.html" class="w3-button w3-bar-item">Pop</a>
-    <a href="#Rap" class="w3-button w3-bar-item">Rap</a>
+    <a href="Rap.html" class="w3-button w3-bar-item">Rap</a>
     <a href="#band" class="w3-button w3-bar-item">About</a>
 
 <!-- Menu icon button  -->
