--- a/final_project/Rap.html
+++ b/final_project/Rap.html
@@ -127,6 +127,7 @@ input[type=text]:focus {
 </div>
 
 
+<div class="container marketing">
 <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-5">
