--- a/final_project/About.html
+++ b/final_project/About.html
@@ -126,27 +126,9 @@ input[type=text]:focus {
 </form>
 </div>
 
-
-<div class="container marketing">
-  <hr class="featurette-divider">
-    <div class="row featurette">
-      <div class="col-md-10">
-        <h2 class="featurette-heading"><a href="Rap.html">Rap Music in 2017<span class="text-muted">New</span></h2></a>
-      </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" src="https://lh3.googleusercontent.com/ChCWUr5h6ViGQEI_OBkIJOBRPj_QYRPisM5EUUJm-MsoyZfiyeu4dTVuqVa593-xOtdruty6_VA=w300"style="height:70%;width:70%">
-        </div>
-
-          <div class="row">
-            <div class="container">
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/xqY59FOcUy8" frameborder="0" allowfullscreen></iframe>
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/X7sSE3yCNLI" frameborder="0" allowfullscreen></iframe>
-            <div>
-          </div>
-      <div>
-</div>
+<h1>About</h1>
+<p>My name is Sy Loc, I am from <a href="http://www.thurgoodmarshallphoenix.org/">Thurgood Marshall High School </a> in San Francisco, California and this year I am 12th grade. I make this 
+</p>
 
 
 </body>
