--- a/final_project/Rap.html
+++ b/final_project/Rap.html
@@ -162,6 +162,7 @@ input[type=text]:focus {
 
 
 <!--Footer -->
+<hr class="featurette-divider">
 <footer style="background-color:#8C8986; height:70px; width:100%; position:absolute; bottom: 0">
     <div class="footer-contact">
       <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:23%">
