--- a/final_project/About.html
+++ b/final_project/About.html
@@ -148,9 +148,9 @@ input[type=text]:focus {
 
 
 <!--Footer -->
-<footer style="background-color:#8C8986; height:70px; width:100%; position:absolute; bottom: 0">
+<footer style="background-color:#3B3939; height:70px; width:100%; position:absolute; bottom: 0">
     <div class="footer-contact">
-      <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:10%">
+      <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:10%">
        <h3><a href="">Contact</a></h3>
        <p><a href="mailto:">SyLoc@fake.com</a></p>
        <p><a href="tel:">(415)-629-2575</a></p>
@@ -160,7 +160,7 @@ input[type=text]:focus {
 
 
     <div class="footer-navigation">
-      <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:13%">
+      <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:13%">
       <div class="footer-links-holder">
         <h3><a href="">Connect</a></h3>
           <a href="https://www.facebook.com/" class="facebook">
@@ -174,7 +174,7 @@ input[type=text]:focus {
     </div>
 
 
-    <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:77%">
+    <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:77%">
       <div class="footer-links-holder">
         <h3><a href="">Navigate</a></h3>
             <li><a href="">Final.html</a></li>
@@ -185,15 +185,11 @@ input[type=text]:focus {
 
 
   <div class="bottom-bar">
-    <div class="col-xs-6" style="background-color:#E43131;height:50px;width:100%">
+    <div class="col-xs-6" style="background-color:#000;height:50px;width:100%">
       <center>Copyright © 2017 Sy Loc. All Rights Reserved| <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
     </div>
   </div>
 </footer>
-
-
-
-
 
 
 
