--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -111,7 +111,7 @@ input[type=text] {
     background-image: url('searchicon.png');
     background-position: 10px 10px;
     background-repeat: no-repeat;
-    padding: 10px 20px 8px 80px;
+    padding: 12px 20px 12px 40px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
@@ -121,12 +121,9 @@ input[type=text]:focus {
 }
 </style>
 </head>
-
 <form>
   <input type="text" name="search" placeholder="Search..">
 </form>
-</div>
-
 
 <!-- Change every 3 seconds (Bootstrap Carousel)-->
 <div class="container">
@@ -215,9 +212,9 @@ input[type=text]:focus {
 
 <!--Footer -->
 <hr class="featurette-divider">
-<footer style="background-color:#8C8986; height:70px; width:100%; position:absolute; bottom: 1">
+<footer style="background-color:#3B3939; height:70px; width:100%; position:absolute; bottom: 1">
     <div class="footer-contact">
-      <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:23%">
+      <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:23%">
        <h3><a href="">Contact</a></h3>
        <p><a href="mailto:">SyLoc@fake.com</a></p>
        <p><a href="tel:">(415)-629-2575</a></p>
@@ -227,7 +224,7 @@ input[type=text]:focus {
 
 
     <div class="footer-navigation">
-      <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:23%">
+      <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:23%">
       <div class="footer-links-holder">
         <h3><a href="">Connect</a></h3>
           <a href="https://www.facebook.com/" class="facebook">
@@ -241,7 +238,7 @@ input[type=text]:focus {
     </div>
 
 
-    <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:54%">
+    <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:54%">
       <div class="footer-links-holder">
         <h3><a href="">Navigate</a></h3>
             <li><a href="">Final.html</a></li>
@@ -251,11 +248,15 @@ input[type=text]:focus {
     </div>
 
     <div class="bottom-bar">
-      <div class="col-xs-6" style="background-color:#E43131;height:50px;width:100%">
+      <div class="col-xs-6" style="background-color:#000;height:50px;width:100%">
         <center>Copyright © 2017 Sy Loc. All Rights Reserved| <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
       </div>
     </div>
 </footer>
+
+
+
+
 
 
 
