--- a/final_project/Pop.html
+++ b/final_project/Pop.html
@@ -190,9 +190,9 @@ input[type=text]:focus {
 
 <!--Footer -->
 <hr class="featurette-divider">
-<footer style="background-color:#8C8986; height:70px; width:100%; position:absolute; bottom: 1">
+<footer style="background-color:#3B3939; height:70px; width:100%; position:absolute; bottom: 1">
     <div class="footer-contact">
-      <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:23%">
+      <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:23%">
        <h3><a href="">Contact</a></h3>
        <p><a href="mailto:">SyLoc@fake.com</a></p>
        <p><a href="tel:">(415)-629-2575</a></p>
@@ -202,7 +202,7 @@ input[type=text]:focus {
 
 
     <div class="footer-navigation">
-      <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:23%">
+      <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:23%">
       <div class="footer-links-holder">
         <h3><a href="">Connect</a></h3>
           <a href="https://www.facebook.com/" class="facebook">
@@ -216,7 +216,7 @@ input[type=text]:focus {
     </div>
 
 
-    <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:54%">
+    <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:54%">
       <div class="footer-links-holder">
         <h3><a href="">Navigate</a></h3>
             <li><a href="">Final.html</a></li>
@@ -226,7 +226,7 @@ input[type=text]:focus {
     </div>
 
     <div class="bottom-bar">
-      <div class="col-xs-6" style="background-color:#E43131;height:50px;width:100%">
+      <div class="col-xs-6" style="background-color:#000;height:50px;width:100%">
         <center>Copyright © 2017 Sy Loc. All Rights Reserved| <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
       </div>
     </div>
