--- a/final_project/Rap.html
+++ b/final_project/Rap.html
@@ -127,6 +127,45 @@ input[type=text]:focus {
 </div>
 
 
+<!-- Change every 3 seconds -->
+<div class="container">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+
+    <!-- Wrapper for slides background image -->
+    <div class="carousel-inner">
+    <div class="item active">
+        <img src="https://christinthecity.files.wordpress.com/2013/12/music.jpg"  style="width:100%; height:300px">
+      </div>
+      <div class="item">
+        <img src="http://4.bp.blogspot.com/-0VwEQnxKF_8/UAQu5CgkSDI/AAAAAAAAAag/8HtVnr-8Aq8/s1600/wallpapers+by+famdoc+%2824%29.jpg" style="width:100%; height:300px">
+      </div>
+      <div class="item">
+        <img src="https://s-media-cache-ak0.pinimg.com/originals/68/02/31/680231d18a6c2d9520ce4b8d86390ec7.jpg" style="width:100%; height:300px">
+      </div>
+    </div>
+
+<!-- Left and right controls arrow -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+
+
 <div class="container marketing">
     <div class="row featurette">
       <div class="col-md-10">
@@ -163,9 +202,9 @@ input[type=text]:focus {
 
 <!--Footer -->
 <hr class="featurette-divider">
-<footer style="background-color:#8C8986; height:70px; width:100%; position:absolute; bottom: 1">
+<footer style="background-color:#3B3939; height:70px; width:100%; position:absolute; bottom: 1">
     <div class="footer-contact">
-      <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:23%">
+      <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:23%">
        <h3><a href="">Contact</a></h3>
        <p><a href="mailto:">SyLoc@fake.com</a></p>
        <p><a href="tel:">(415)-629-2575</a></p>
@@ -175,7 +214,7 @@ input[type=text]:focus {
 
 
     <div class="footer-navigation">
-      <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:23%">
+      <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:23%">
       <div class="footer-links-holder">
         <h3><a href="">Connect</a></h3>
           <a href="https://www.facebook.com/" class="facebook">
@@ -189,7 +228,7 @@ input[type=text]:focus {
     </div>
 
 
-    <div class="col-xs-6" style="background-color:#8C8986;height:200px;width:54%">
+    <div class="col-xs-6" style="background-color:#3B3939;height:200px;width:54%">
       <div class="footer-links-holder">
         <h3><a href="">Navigate</a></h3>
             <li><a href="">Final.html</a></li>
@@ -199,7 +238,7 @@ input[type=text]:focus {
     </div>
 
     <div class="bottom-bar">
-      <div class="col-xs-6" style="background-color:#E43131;height:50px;width:100%">
+      <div class="col-xs-6" style="background-color:#000;height:50px;width:100%">
         <center>Copyright © 2017 Sy Loc. All Rights Reserved| <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
       </div>
     </div>
