--- a/final_project/Pop.html
+++ b/final_project/Pop.html
@@ -97,10 +97,10 @@ input[type=text]:focus {
     </div>
           <div class="row">
             <div class="container">
-              <iframe width="24%" height="50%" src="https://www.youtube.com/embed/FN7ALfpGxiI" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24%" height="50%" src="https://www.youtube.com/embed/qGRU3sRbaYw" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24%" height="50%" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/FN7ALfpGxiI" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/qGRU3sRbaYw" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
 </div>
@@ -109,7 +109,7 @@ input[type=text]:focus {
 <hr class="featurette-divider">
 <div class="row">
   <div class="container">
-  <iframe width="25%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 
@@ -117,22 +117,18 @@ input[type=text]:focus {
 
 
 <!-- Footer -->
-<hr class="featurette-divider">
-<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge" style="width:100%; position:absolute>
+<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
   <p class="w3-medium">
-    <a href="Final.html" target="_blank">Home</a>
-    <a href="Pop.html" target="_blank">Pop</a>
-    <a href="Rap.html" target="_blank">Rap</a>
-    <a href="About.html" target="_blank">About</a>
-  <p class="w3-medium">
-  Copyright © 2017 Sy Loc. All Rights Reserved| <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
+    <a href="Final.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
   </p>
-  </p>
+    <p class="w3-medium">
+      Copyright © 2017 Sy Loc. All Rights Reserved | <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
+    </p>
 </footer>
 
 
