--- a/final_project/About.html
+++ b/final_project/About.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+<link rel="icon" href="../../favicon.ico">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -51,11 +52,7 @@ input[type=text]:focus {
 </div>
 
 
-<h1><center>About</center></h1>
-<h4><center>My name is Sy Loc, I am from <a href="http://www.thurgoodmarshallphoenix.org/">Thurgood Marshall High School </a> in San Francisco, California and this year I am 12th grade.</center></p>
-<p><center>I made this Websit from <a href="https://www.holbertonschool.com/">Holberton School</a> at <a href="https://www.google.com/maps/place/98+Battery+St,+San+Francisco,+CA+94111/@37.792085,-122.4015567,17z/data=!3m1!4b1!4m5!3m4!1s0x808580622573b699:0x6200e77f86c50867!8m2!3d37.792085!4d-122.399368">(98 battery street).</a></center></p></h4>
-
-
+<div class="container">
 <center>
 <a href="https://www.facebook.com/" class="facebook">
 <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/facebook_circle_color-256.png" style="height:50px; width:50px"></a>
@@ -64,25 +61,47 @@ input[type=text]:focus {
 <a href="https://www.linkedin.com/" class="linkedin">
 <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" style="height:50px; width:50px"></a>
 </center>
+</div>
+
+<h1><center>About</center></h1>
+<div class="container">
+<h4><center>My name is Sy Loc, I am from <a href="http://www.thurgoodmarshallphoenix.org/">Thurgood Marshall High School </a> in San Francisco, California and this year I am 12th grade.</center></p>
+<p><center>I made this Websit from <a href="https://www.holbertonschool.com/">Holberton School</a> at <a href="https://www.google.com/maps/place/98+Battery+St,+San+Francisco,+CA+94111/@37.792085,-122.4015567,17z/data=!3m1!4b1!4m5!3m4!1s0x808580622573b699:0x6200e77f86c50867!8m2!3d37.792085!4d-122.399368">(98 battery street).</a></center></p></h4>
+</div>
+
+
+<hr class="featurette-divider">
+<center><img src="http://eaop.berkeley.edu/sites/default/files/portfolio/school_thurgood.jpg" style="height:300px; width:400px">
+<h4>Thurgood Marshall Academic High School located at <a href="https://www.google.com/maps/place/45+Conkling+St,+San+Francisco,+CA+94124/@37.7359038,-122.4039905,17z/data=!3m1!4b1!4m5!3m4!1s0x808f7efe2223ff3d:0xaf32d40afe93f4ef!8m2!3d37.7359038!4d-122.4017965">45 Conkling Street, San Francisco, CA.</a>
+</h4>
+</center>
+
+<hr class="featurette-divider">
+  <center>
+    <img class="rounded-circle" src="https://i.ytimg.com/vi/an2YAvK_Q1s/maxresdefault.jpg" alt="Generic placeholder image" width="140" height="140">
+    <h2>Why did I build this Website?</h2>
+    <p><font size="4">I build this website because this is my final project of Holberton School and this is mantatory.</p><p>Just because I love music so I want to make a website have a list of music.</p><p>So I can listen to my music anywhere If I forget to bring my phone.</font></p>
+  </center>
+<p><a href="#">Back to top</a></p>
+
+
+
 
 
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge" style="width:100%; position:absolute; bottom: 0">
+<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
   <p class="w3-medium">
-    <a href="Final.html" target="_blank">Home</a>
-    <a href="Pop.html" target="_blank">Pop</a>
-    <a href="Rap.html" target="_blank">Rap</a>
-    <a href="About.html" target="_blank">About</a>
-  <p class="w3-medium">
-  Copyright © 2017 Sy Loc. All Rights Reserved| <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
+    <a href="Final.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
   </p>
-  </p>
+    <p class="w3-medium">
+      Copyright © 2017 Sy Loc. All Rights Reserved | <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
+    </p>
 </footer>
 
 
