--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -130,7 +130,6 @@ input[type=text]:focus {
 
 
 <!-- Footer -->
-<hr class="featurette-divider">
 <footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
@@ -138,14 +137,11 @@ input[type=text]:focus {
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
   <p class="w3-medium">
-    <a href="Final.html" target="_blank">Home</a>
-    <a href="Pop.html" target="_blank">Pop</a>
-    <a href="Rap.html" target="_blank">Rap</a>
-    <a href="About.html" target="_blank">About</a>
-  <p class="w3-medium">
-  Copyright © 2017 Sy Loc. All Rights Reserved| <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
+    <a href="Final.html" target="_blank">Home</a> | <a href="Pop.html" target="_blank">Pop</a> | <a href="Rap.html" target="_blank">Rap</a> | <a href="About.html" target="_blank">About</a>
   </p>
-  </p>
+    <p class="w3-medium">
+      Copyright © 2017 Sy Loc. All Rights Reserved | <a href="">Privacy Policy</a> | <a href="">Terms of Service</center></a>
+    </p>
 </footer>
 
 
