--- a/final_project/Rap.html
+++ b/final_project/Rap.html
@@ -12,13 +12,39 @@
 
 <body>
 
-   <!-- Home Bar  -->
-   <nav class="w3-bar w3-red">
-    <a href="Final.html" class="w3-button w3-bar-item">Home</a>
-    <a href="Pop.html" class="w3-button w3-bar-item">Pop</a>
-    <a href="Rap.html" class="w3-button w3-bar-item">Rap</a>
-    <a href="About.html" class="w3-button w3-bar-item">About</a>
+  <!-- content in the Menu Icon -->
+    <div class="collapse bg-inverse" id="navbarHeader">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-8 py-4">
+              <h4 class="text-white">About</h4>
+
+              <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+            </div>
+            <div class="col-sm-4 py-4">
+              <h4 class="text-white">Contact</h4>
+              <ul class="list-unstyled">
+                <li><a href="#" class="text-white">Follow on Twitter</a></li>
+                <li><a href="#" class="text-white">Like on Facebook</a></li>
+                <li><a href="#" class="text-white">Email me</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+     <!-- Home Bar  -->
+  <nav class="w3-bar w3-yellow">
+      <a href="Final.html" class="w3-button w3-bar-item">Home</a>
+      <a href="Pop.html" class="w3-button w3-bar-item">Pop</a>
+      <a href="Rap.html" class="w3-button w3-bar-item">Rap</a>
+      <a href="About.html" class="w3-button w3-bar-item">About</a>
+      <!-- Menu Icon button and working here -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation" style="float:right;">
+          <span style="font-size:22px;cursor:pointer; " onclick="openNav() ">&#9776; </span>
+        </button>
   </nav>
+
 
 
 <!-- Search... Bar  -->
