--- a/final_project/Pop.html
+++ b/final_project/Pop.html
@@ -19,7 +19,7 @@
             <div class="col-sm-8 py-4">
               <h4 class="text-white">About</h4>
 
-              <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+              <p class="text-muted">My name is Sy Loc, I am from Thurgood Marshall High School in San Francisco, California and this year I am 12th grade. I made this Websit from Holberton School at (98 battery street).</p>
             </div>
             <div class="col-sm-4 py-4">
               <h4 class="text-white">Contact</h4>
@@ -143,7 +143,7 @@ input[type=text]:focus {
 
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
+<footer class="w3-container w3-padding-64 w3-center w3-yellow w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
