--- a/final_project/Rap.html
+++ b/final_project/Rap.html
@@ -47,34 +47,34 @@
 
 
 
-<!-- Search... Bar  -->
-<head>
-<style>
-input[type=text] {
-    width: 100%;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url('searchicon.png');
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
+  <!-- Search... Bar  -->
+  <head>
+    <div class="container">
+  <style>
+  input[type=text] {
+      width: 100%;
+      box-sizing: border-box;
+      border: 2px solid #fff000;
+      border-radius: 2px;
+      font-size: 16px;
+      background-color: white;
+      background-image: url('2000px-Red.svg.png');
+      background-position: 10px 10px;
+      background-repeat: no-repeat;
+      padding: 5px 20px 5px 40px;
+      -webkit-transition: width 0.4s ease-in-out;
+      transition: width 0.4s ease-in-out;
+  }
 
-input[type=text]:focus {
-    width: 100%;
-}
-</style>
-</head>
-
-<form>
-  <input type="text" name="search" placeholder="Search..">
-</form>
-</div>
+  input[type=text]:focus {
+      width: 100%;
+  }
+  </style>
+  </head>
+  <form>
+    <input type="text" name="search" placeholder="Search..">
+  </form>
+  </div>
 
 
 
@@ -122,29 +122,46 @@ input[type=text]:focus {
     <div class="col-md-10">
       <h2 class="featurette-heading"><a href="Rap.html">Rap Music in 2017<span class="text-muted">New</span></h2></a>
     </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" src="https://lh3.googleusercontent.com/ChCWUr5h6ViGQEI_OBkIJOBRPj_QYRPisM5EUUJm-MsoyZfiyeu4dTVuqVa593-xOtdruty6_VA=w300"style="height:70%;width:70%">
-        </div>
           <div class="row">
             <div class="container">
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/xqY59FOcUy8" frameborder="0" allowfullscreen></iframe>
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/X7sSE3yCNLI" frameborder="0" allowfullscreen></iframe>
-              <iframe width="22.6%" height="50%" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
-              <iframe width="22.6%" height="50%" src="https://www.youtube.com/embed/X7sSE3yCNLI" frameborder="0" allowfullscreen></iframe>
-              <iframe width="22.6%" height="50%" src="https://www.youtube.com/embed/xqY59FOcUy8" frameborder="0" allowfullscreen></iframe>
-              <iframe width="22.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
-              <iframe width="22.6%" height="50%" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
-              <iframe width="22.6%" height="50%" src="https://www.youtube.com/embed/X7sSE3yCNLI" frameborder="0" allowfullscreen></iframe>
-              <iframe width="22.6%" height="50%" src="https://www.youtube.com/embed/xqY59FOcUy8" frameborder="0" allowfullscreen></iframe>
-              <iframe width="22.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
-            </div>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/xqY59FOcUy8" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/X7sSE3yCNLI" frameborder="0" allowfullscreen></iframe>
+              </div>
           </div>
 </div>
 
 
 
+<hr class="featurette-divider">
+<div class="row">
+  <div class="container">
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
+
+
+
+<hr class="featurette-divider">
+<div class="row">
+  <div class="container">
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
+
+
+
+<hr class="featurette-divider">
+<div class="row">
+  <div class="container">
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
+
+
+
+<hr class="featurette-divider">
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-yellow w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
