--- a/final_project/About.html
+++ b/final_project/About.html
@@ -25,7 +25,7 @@
           <div class="col-sm-4 py-4">
             <h4 class="text-white">Contact</h4>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Follow on Twitter</a></li>
+              <li><a href="https://twitter.com/syloc10" class="text-white">Follow on Twitter</a></li>
               <li><a href="#" class="text-white">Like on Facebook</a></li>
               <li><a href="#" class="text-white">Email me</a></li>
             </ul>
@@ -36,6 +36,7 @@
 
    <!-- Home Bar  -->
 <nav class="w3-bar w3-yellow">
+    <a href="#"><img src="https://dcassetcdn.com/design_img/439863/105931/105931_3246188_439863_thumbnail.jpg" width="40" height="40" style="float:left;">
     <a href="Final.html" class="w3-button w3-bar-item">Home</a>
     <a href="Pop.html" class="w3-button w3-bar-item">Pop</a>
     <a href="Rap.html" class="w3-button w3-bar-item">Rap</a>
@@ -45,37 +46,6 @@
         <span style="font-size:22px;cursor:pointer; " onclick="openNav() ">&#9776; </span>
       </button>
 </nav>
-
-
-
-<!-- Search... Bar  -->
-<head>
-<style>
-input[type=text] {
-    width: 100%;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url('searchicon.png');
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-input[type=text]:focus {
-    width: 100%;
-}
-</style>
-</head>
-
-<form>
-  <input type="text" name="search" placeholder="Search..">
-</form>
-</div>
 
 
 
@@ -96,6 +66,7 @@ input[type=text]:focus {
 <div class="container">
 <h4><center>My name is Sy Loc, I am from <a href="http://www.thurgoodmarshallphoenix.org/">Thurgood Marshall High School </a> in San Francisco, California and this year I am 12th grade.</center></p>
 <p><center>I made this Websit from <a href="https://www.holbertonschool.com/">Holberton School</a> at <a href="https://www.google.com/maps/place/98+Battery+St,+San+Francisco,+CA+94111/@37.792085,-122.4015567,17z/data=!3m1!4b1!4m5!3m4!1s0x808580622573b699:0x6200e77f86c50867!8m2!3d37.792085!4d-122.399368">(98 battery street).</a></center></p></h4>
+<center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3174.8429440632576!2d-122.40154335507899!3d37.79208509760024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580622573b699%3A0xaded7ddeaaf9319c!2sHolberton!5e0!3m2!1sen!2sus!4v1499895733947" width="400" height="250" frameborder="0" style="border:0" allowfullscreen></iframe></center>
 </div>
 
 
@@ -119,6 +90,7 @@ input[type=text]:focus {
 
 
 <!-- Footer -->
+<hr class="featurette-divider">
 <footer class="w3-container w3-padding-64 w3-center w3-yellow w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
