--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -49,18 +49,19 @@
 
 <!-- Search... Bar  -->
 <head>
+  <div class="container">
 <style>
 input[type=text] {
     width: 100%;
     box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
+    border: 2px solid #fff000;
+    border-radius: 2px;
     font-size: 16px;
     background-color: white;
-    background-image: url('searchicon.png');
+    background-image: url('2000px-Red.svg.png');
     background-position: 10px 10px;
     background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
+    padding: 5px 20px 5px 40px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
@@ -73,6 +74,7 @@ input[type=text]:focus {
 <form>
   <input type="text" name="search" placeholder="Search..">
 </form>
+</div>
 
 
 
@@ -89,13 +91,13 @@ input[type=text]:focus {
 <!-- Wrapper for slides --><!-- Background Image -->
 <div class="carousel-inner">
   <div class="item active">
-    <img src="https://s-media-cache-ak0.pinimg.com/originals/f4/e1/06/f4e1064f2f2f06e9c5f71fef985a2281.jpg" alt="Chicago" style="width:100%;">
+    <img src="https://s-media-cache-ak0.pinimg.com/originals/f4/e1/06/f4e1064f2f2f06e9c5f71fef985a2281.jpg" style="width:100%;">
   </div>
     <div class="item">
-      <img src="https://i.ytimg.com/vi/dhviMuktFdA/maxresdefault.jpg" alt="Los Angeles" style="width:100%;">
+      <img src="https://i.ytimg.com/vi/dhviMuktFdA/maxresdefault.jpg" style="width:100%;">
     </div>
       <div class="item">
-        <img src="https://i.ytimg.com/vi/s4spqOY6Rfc/maxresdefault.jpg" alt="New york" style="width:100%;">
+        <img src="https://i.ytimg.com/vi/s4spqOY6Rfc/maxresdefault.jpg" style="width:100%;">
       </div>
 </div>
 
