--- a/final_project/Pop.html
+++ b/final_project/Pop.html
@@ -47,34 +47,34 @@
 
 
 
-<!-- Search... Bar  -->
-<head>
-<style>
-input[type=text] {
-    width: 100%;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url('searchicon.png');
-    background-position: 10px 10px;
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
+  <!-- Search... Bar  -->
+  <head>
+    <div class="container">
+  <style>
+  input[type=text] {
+      width: 100%;
+      box-sizing: border-box;
+      border: 2px solid #fff000;
+      border-radius: 2px;
+      font-size: 16px;
+      background-color: white;
+      background-image: url('2000px-Red.svg.png');
+      background-position: 10px 10px;
+      background-repeat: no-repeat;
+      padding: 5px 20px 5px 40px;
+      -webkit-transition: width 0.4s ease-in-out;
+      transition: width 0.4s ease-in-out;
+  }
 
-input[type=text]:focus {
-    width: 100%;
-}
-</style>
-</head>
-
-<form>
-  <input type="text" name="search" placeholder="Search..">
-</form>
-</div>
+  input[type=text]:focus {
+      width: 100%;
+  }
+  </style>
+  </head>
+  <form>
+    <input type="text" name="search" placeholder="Search..">
+  </form>
+  </div>
 
 
 
@@ -123,10 +123,10 @@ input[type=text]:focus {
     </div>
           <div class="row">
             <div class="container">
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/FN7ALfpGxiI" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/qGRU3sRbaYw" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/-u9bCZAOYpI" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/l-gSWc7TlRA" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/a59gmGkq_pw" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/_dK2tDK9grQ" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
 </div>
@@ -136,13 +136,41 @@ input[type=text]:focus {
 <hr class="featurette-divider">
 <div class="row">
   <div class="container">
-  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/3AtDnEC4zak" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/TMSIR210mRg" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/e8qDOGLCSFo" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/_dK2tDK9grQ" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
+
+
+
+<hr class="featurette-divider">
+<div class="row">
+  <div class="container">
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/FN7ALfpGxiI" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/qGRU3sRbaYw" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
+
+
+<hr class="featurette-divider">
+<div class="row">
+  <div class="container">
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/FN7ALfpGxiI" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/qGRU3sRbaYw" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
+
 
 
 
 <!-- Footer -->
+<hr class="featurette-divider">
 <footer class="w3-container w3-padding-64 w3-center w3-yellow w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
