--- a/final_project/About.html
+++ b/final_project/About.html
@@ -36,6 +36,7 @@
 
    <!-- Home Bar  -->
 <nav class="w3-bar w3-yellow">
+  <a href="Final.html" class="w3-button w3-bar-item">SYMUSICLOC</a>
     <a href="#"><img src="https://dcassetcdn.com/design_img/439863/105931/105931_3246188_439863_thumbnail.jpg" width="40" height="40" style="float:left;">
     <a href="Final.html" class="w3-button w3-bar-item">Home</a>
     <a href="Pop.html" class="w3-button w3-bar-item">Pop</a>
@@ -46,6 +47,7 @@
         <span style="font-size:22px;cursor:pointer; " onclick="openNav() ">&#9776; </span>
       </button>
 </nav>
+
 
 
 
