--- a/final_project/Rap.html
+++ b/final_project/Rap.html
@@ -120,14 +120,14 @@
 <hr class="featurette-divider">
 <div class="container">
     <div class="col-md-10">
-      <h2 class="featurette-heading"><a href="Rap.html">Rap Music in 2017<span class="text-muted">New</span></h2></a>
+      <h2 class="featurette-heading">Rap Music in 2017<span class="text-muted">New</span></h2>
     </div>
           <div class="row">
             <div class="container">
               <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/xqY59FOcUy8" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/D-6JDufCJ1Y" frameborder="0" allowfullscreen></iframe>
               <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/X7sSE3yCNLI" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/XyMJkvG3rM0" frameborder="0" allowfullscreen></iframe>
               </div>
           </div>
 </div>
@@ -137,7 +137,10 @@
 <hr class="featurette-divider">
 <div class="row">
   <div class="container">
-  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/aqgZDhhksa4" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/gq7hMQOC1QQ" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/T_xovLIHU40" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/v4peazIZprY" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 
@@ -146,7 +149,10 @@
 <hr class="featurette-divider">
 <div class="row">
   <div class="container">
-  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/gW_As8jQmEM" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/16B8btfN77Y" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/XBVYnIddiVQ" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/HqTe2T-RChE" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 
@@ -155,7 +161,10 @@
 <hr class="featurette-divider">
 <div class="row">
   <div class="container">
-  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/U_ppsAcbZDo" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/x2_zDpS2Ftg" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/bBb4lm477iE" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Qg52au6_Low" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/IKtC5v5Lybk" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 
