--- a/final_project/About.html
+++ b/final_project/About.html
@@ -36,8 +36,6 @@
 
    <!-- Home Bar  -->
 <nav class="w3-bar w3-yellow">
-  <a href="Final.html" class="w3-button w3-bar-item">SYMUSICLOC</a>
-    <a href="#"><img src="https://dcassetcdn.com/design_img/439863/105931/105931_3246188_439863_thumbnail.jpg" width="40" height="40" style="float:left;">
     <a href="Final.html" class="w3-button w3-bar-item">Home</a>
     <a href="Pop.html" class="w3-button w3-bar-item">Pop</a>
     <a href="Rap.html" class="w3-button w3-bar-item">Rap</a>
@@ -74,6 +72,7 @@
 
 
 <hr class="featurette-divider">
+<center><h3>Thurgood Marshall Academic High School</h3>
 <center><img src="http://eaop.berkeley.edu/sites/default/files/portfolio/school_thurgood.jpg" style="height:300px; width:400px">
 <h4>Thurgood Marshall Academic High School located at <a href="https://www.google.com/maps/place/45+Conkling+St,+San+Francisco,+CA+94124/@37.7359038,-122.4039905,17z/data=!3m1!4b1!4m5!3m4!1s0x808f7efe2223ff3d:0xaf32d40afe93f4ef!8m2!3d37.7359038!4d-122.4017965">45 Conkling Street, San Francisco, CA.</a>
 </h4>
