--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -127,8 +127,8 @@ input[type=text]:focus {
           <div class="row">
             <div class="container">
               <iframe width="25%" height="50%" src="https://www.youtube.com/embed/FN7ALfpGxiI" frameborder="0" allowfullscreen></iframe>
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
-              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/qGRU3sRbaYw" frameborder="0" allowfullscreen></iframe>
+              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/QQ3tlLq_Z14" frameborder="0" allowfullscreen></iframe>
+              <iframe width="25%" height="50%" src="https://www.youtube.com/embed/-u9bCZAOYpI" frameborder="0" allowfullscreen></iframe>
               <iframe width="25%" height="50%" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
