--- a/final_project/Pop.html
+++ b/final_project/Pop.html
@@ -119,14 +119,14 @@
 <hr class="featurette-divider">
 <div class="container">
     <div class="col-md-10">
-      <h2 class="featurette-heading"><a href="Rap.html">Pop Music in 2017<span class="text-muted">New</span></h2></a>
+      <h2 class="featurette-heading">Pop Music in 2017<span class="text-muted">New</span></h2>
     </div>
           <div class="row">
             <div class="container">
               <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/-u9bCZAOYpI" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/l-gSWc7TlRA" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/a59gmGkq_pw" frameborder="0" allowfullscreen></iframe>
-              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/_dK2tDK9grQ" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/QQ3tlLq_Z14" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/H-fI_h_pXw8" frameborder="0" allowfullscreen></iframe>
+              <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/aqgZDhhksa4" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
 </div>
@@ -136,10 +136,10 @@
 <hr class="featurette-divider">
 <div class="row">
   <div class="container">
-  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/3AtDnEC4zak" frameborder="0" allowfullscreen></iframe>
-  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/TMSIR210mRg" frameborder="0" allowfullscreen></iframe>
-  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/e8qDOGLCSFo" frameborder="0" allowfullscreen></iframe>
-  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/_dK2tDK9grQ" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/ZywDWOaQ9GU" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/fTc5tuEn6_U" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Aeic7JQ_xds" frameborder="0" allowfullscreen></iframe>
+  <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/rWIsNCdfPAM" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 
@@ -148,10 +148,10 @@
 <hr class="featurette-divider">
 <div class="row">
   <div class="container">
-    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/FN7ALfpGxiI" frameborder="0" allowfullscreen></iframe>
-    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/Llw9Q6akRo4" frameborder="0" allowfullscreen></iframe>
-    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/qGRU3sRbaYw" frameborder="0" allowfullscreen></iframe>
-    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/8g5iIG2VvnQ" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/eyFP5s403jY" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/j__Q13iAxNk" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/o0GYK5Whk80" frameborder="0" allowfullscreen></iframe>
+    <iframe width="24.6%" height="50%" src="https://www.youtube.com/embed/X7sSE3yCNLI" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 
