--- a/final_project/Final.html
+++ b/final_project/Final.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<body style="background-color:#"
 </head>
 
 <body>
@@ -24,9 +25,9 @@
             <div class="col-sm-4 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Follow on Twitter</a></li>
+                <li><span class="glyphicon glyphicon-envelope"></span>Gmail: sykhailoc@gmail.com</li>
+                <li><span class="glyphicon glyphicon-phone"></span>Phone: (415) 629-2575 </li>
                 <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
               </ul>
             </div>
           </div>
