--- a/final_project/Pop.html
+++ b/final_project/Pop.html
@@ -24,9 +24,9 @@
             <div class="col-sm-4 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Follow on Twitter</a></li>
+                <li><span class="glyphicon glyphicon-envelope"></span>Gmail: sykhailoc@gmail.com</li>
+                <li><span class="glyphicon glyphicon-phone"></span>Phone: (415) 629-2575 </li>
                 <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
               </ul>
             </div>
           </div>
