--- a/final_project/About.html
+++ b/final_project/About.html
@@ -20,14 +20,15 @@
           <div class="col-sm-8 py-4">
             <h4 class="text-white">About</h4>
 
-            <p class="text-muted">My name is Sy Loc, I am from Thurgood Marshall High School in San Francisco, California and this year I am 12th grade. I made this Websit from Holberton School at (98 battery street).</p>
+            <p class="text-muted">My name is Sy Loc, I am from Thurgood Marshall High School in San Francisco, California and this year I am 12th grade. I made this Website from Holberton School at (98 battery street).</p>
           </div>
           <div class="col-sm-4 py-4">
             <h4 class="text-white">Contact</h4>
             <ul class="list-unstyled">
-              <li><a href="https://twitter.com/syloc10" class="text-white">Follow on Twitter</a></li>
+              <li><span class="glyphicon glyphicon-envelope"></span>Gmail: sykhailoc@gmail.com</li>
+              <li><span class="glyphicon glyphicon-phone"></span>Phone: (415) 629-2575 </li>
               <li><a href="#" class="text-white">Like on Facebook</a></li>
-              <li><a href="#" class="text-white">Email me</a></li>
+
             </ul>
           </div>
         </div>
@@ -74,8 +75,9 @@
 <hr class="featurette-divider">
 <center><h3>Thurgood Marshall Academic High School</h3>
 <center><img src="http://eaop.berkeley.edu/sites/default/files/portfolio/school_thurgood.jpg" style="height:300px; width:400px">
-<h4>Thurgood Marshall Academic High School located at <a href="https://www.google.com/maps/place/45+Conkling+St,+San+Francisco,+CA+94124/@37.7359038,-122.4039905,17z/data=!3m1!4b1!4m5!3m4!1s0x808f7efe2223ff3d:0xaf32d40afe93f4ef!8m2!3d37.7359038!4d-122.4017965">45 Conkling Street, San Francisco, CA.</a>
-</h4>
+<p><font size="3">Thurgood Marshall Academic High School located at <a href="https://www.google.com/maps/place/45+Conkling+St,+San+Francisco,+CA+94124/@37.7359038,-122.4039905,17z/data=!3m1!4b1!4m5!3m4!1s0x808f7efe2223ff3d:0xaf32d40afe93f4ef!8m2!3d37.7359038!4d-122.4017965">45 Conkling Street, San Francisco, CA.</a></p>
+<p><font size="3">This is a great school, there is a lots nice and friendly teachers and students.</p>
+<p><font size="3">Thurgood Marshall H.S have many newcomer students and they are from diffrent coutry and those people are very nice.</p>
 </center>
 
 
